<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_background"
    android:id="@+id/myLayout"
    tools:context="com.example.matt.minesweeper.MainMenuActivity">

    <TextView
        android:id="@+id/txtMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/mine_sweeper"
        android:textColor="@android:color/background_light"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:background="@drawable/btn"
            android:id="@+id/btnPlayGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/play_game" />

        <Button
            android:background="@drawable/btn"
            android:id="@+id/btnOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/options" />

        <Button
            android:background="@drawable/btn"
            android:id="@+id/btnHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="219dp"
        android:layout_height="169dp"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="80dp"
        android:tint="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_new_releases_black_24dp" />
</android.support.constraint.ConstraintLayout>
