<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_background"
    android:id="@+id/myLayout"
    tools:context="com.example.matt.minesweeper.OptionsActivity">

    <LinearLayout
        android:layout_width="471dp"
        android:layout_height="220dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtBoardSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/board_size"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNumMines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="65dp"
                android:text="@string/of_mines"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnResetNumPlayed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn"
                android:text="@string/reset_times_played" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:visibility="visible">

            <RadioGroup
                android:id="@+id/radio_group_board_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </RadioGroup>

            <RadioGroup
                android:id="@+id/radio_group_num_mines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
